--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   carousel_slider: ^5.0.0 # For image carousels
   image_downloader: ^0.31.0 # For downloading images
   flutter_wallpaper_manager: ^0.0.4
+  wallpaper: ^1.1.3
 
 
 dev_dependencies:
